--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -3,6 +3,7 @@
 {% block content %}
     <h1>Location Setup</h1>
     <form method="post">
+    <p class="info">Room, area, or container where items and characters can be. May be subdivided into a grid of positions.</p>
         <label for="location-name">Name:</label>
         <input type="text" id="location-name" name="location_name" value="{{ current.name }}" required><br>
         <label for="location-description">Description:</label>
@@ -41,7 +42,7 @@
                         <button type="button" id="add-destination-btn" class="lesser-button">Add Destination</button>
                     </div>
                 {% else %}
-                    <p class="no-locations">(No other locations)</p>
+                    <p class="no-entities">(No other locations)</p>
                 {% endif %}
             </div>
         </div>
