--- a/app/templates/session/username.html
+++ b/app/templates/session/username.html
@@ -11,11 +11,10 @@
     not the name of your player's character.
     For example, your username could be tom123
     while the main character you play might be named "Thunderfist Joe".</p>
-    <p>If you're playing this game on the internet instead of a LAN,
-    then it's best to avoid giving personal information.</p>
-    <form method="POST" action="{{ url_for('set_username') }}">
+    <p>Leave blank to generate random letters.</p>
+    <form method="POST" action="{{ url_for('change_user') }}">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required autofocus>
+        <input type="text" id="username" name="username" autofocus>
         <button type="submit">Submit</button>
     </form>
 </body>
