Get play routes to display without errors.

--- a/app/templates/configure/character.html
+++ b/app/templates/configure/character.html
@@ -48,7 +48,7 @@
                     <tr>
                         <th>Item</th>
                         <th>Quantity</th>
-                        <th>Worn Slot</th>
+                        <th>Equipment Slot</th>
                         <th class="transparent-col"></th>
                     </tr>
                 </thead>
